remove text decoration on hover for special links, to avoid double border

--- a/sites/all/themes/custom/bcnencomu/sass/components/_page.scss
+++ b/sites/all/themes/custom/bcnencomu/sass/components/_page.scss
@@ -908,6 +908,7 @@ article.node {
       border-bottom: 1px solid $theme_red;
       &:hover {
         color: $theme_red;
+        text-decoration: none;
       }
 
       &.btn {
@@ -918,9 +919,6 @@ article.node {
           content: " ";
           float: left;
           margin-right: 5px;
-        }
-        &:hover {
-          text-decoration: underline;
         }
       }
 
